css fix the navbar, still off center

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -8,11 +8,15 @@
 
 .navbar-nav{
   margin:auto;
-  margin-left:auto;
 }
 
 .navbar-nav li a{
   border-radius: 20px 20px 0 0 ;
+}
+
+.my-navbar{
+  margin: auto;
+  width: 30%;
 }
 
 .container{
@@ -21,6 +25,7 @@
 
 #bottom-container{
   background-color: #eee;
+  border-radius: 20px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 3%;
